# chatgpt_translator

./: pyproject.toml
docs/: EN_Toward an Ontology for Third Generation Systems Thinking.txt  Toward an Ontology for Third Generation Systems Thinking.txt
notebooks/: EN_RU translate.ipynb  project_input_sample.ipynb
